src/main/kotlin/com/example/kca/global/error/ErrorCode.kt
package com.example.kca.global.error

enum class ErrorCode(
    val message: String,
    val status: Int
) {

}